--- a/notebooks/audio-tsne.ipynb
+++ b/notebooks/audio-tsne.ipynb
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "path = '../data/Vintage Drum Machines'\n",
+    "path = '/Users/chris/Desktop/retro_samples'\n",
     "\n",
     "files = []\n",
     "for root, dirnames, filenames in os.walk(path):\n",
@@ -627,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
